--- a/package.json
+++ b/package.json
@@ -24,52 +24,52 @@
   "homepage": "https://github.com/rtivital/react-redux-boilerplate#readme",
   "dependencies": {
     "normalize-scss": "^5.0.3",
-    "react": "^15.2.1",
-    "react-dom": "^15.2.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "react-fastclick": "^2.1.2",
     "react-redux": "^4.4.5",
-    "react-router": "^2.6.0",
+    "react-router": "^3.0.0-alpha.3",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.7",
-    "babel-core": "^6.11.4",
+    "autoprefixer": "^6.4.0",
+    "babel-core": "^6.14.0",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^6.2.5",
     "babel-plugin-module-alias": "^1.6.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.7",
-    "babel-plugin-transform-runtime": "^6.9.0",
-    "babel-polyfill": "^6.9.1",
-    "babel-preset-es2015": "^6.9.0",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
+    "babel-plugin-transform-runtime": "^6.12.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.5.0",
+    "babel-preset-stage-1": "^6.13.0",
     "babel-runtime": "^6.11.6",
     "colors": "^1.1.2",
     "cross-env": "^2.0.0",
-    "css-loader": "^0.23.1",
-    "eslint": "^2.9.0",
-    "eslint-config-airbnb": "^9.0.1",
-    "eslint-import-resolver-babel-module-alias": "^1.4.2",
-    "eslint-plugin-import": "^1.11.1",
-    "eslint-plugin-jsx-a11y": "^1.2.0",
-    "eslint-plugin-react": "^5.2.2",
+    "css-loader": "^0.24.0",
+    "eslint": "^3.4.0",
+    "eslint-config-airbnb": "^10.0.1",
+    "eslint-import-resolver-babel-module-alias": "^1.5.1",
+    "eslint-plugin-import": "^1.14.0",
+    "eslint-plugin-jsx-a11y": "^2.2.0",
+    "eslint-plugin-react": "^6.1.2",
     "extract-text-webpack-plugin": "^1.0.1",
-    "favicons-webpack-plugin": "0.0.6",
+    "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.9.0",
-    "glob": "^7.0.5",
+    "glob": "^7.0.6",
     "html-webpack-plugin": "^2.22.0",
     "node-sass": "^3.8.0",
-    "postcss-loader": "^0.9.1",
+    "postcss-loader": "^0.11.0",
     "react-hot-loader": "^1.3.0",
     "sass-loader": "^4.0.0",
-    "sass-resources-loader": "^1.0.2",
+    "sass-resources-loader": "^1.1.0",
     "style-loader": "^0.13.1",
     "svg-sprite-loader": "0.0.26",
-    "webpack": "^1.13.1",
-    "webpack-dev-server": "^1.14.1"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.0"
   }
 }
