--- a/package.json
+++ b/package.json
@@ -1,13 +1,23 @@
 {
-  "name": "react-redux-boilerplate",
+  "name": "react-challenge-colorizr",
   "version": "1.0.0",
-  "description": "React + Redux + Sass boilerplate",
+  "description": "Boilerplate for second React Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "cross-env NODE_ENV=development node server",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.production.js --progress",
-    "lint": "eslint src --ext .js --ext .jsx"
+    "test": "npm run lint:withoutfix && npm run testonly",
+    "testonly": "cross-env NODE_ENV=development tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-notify | tap-spec",
+    "start": "cross-env NODE_ENV=development babel-node server.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack.config.babel.js --progress",
+    "clean": "rimraf public",
+    "lint": "eslint src --ext .js --ext .jsx --fix",
+    "lint:withoutfix": "eslint src --ext .js --ext .jsx",
+    "gh:build": "npm run clean && cross-env NODE_ENV=production BUILD=pages webpack --config webpack.config.babel.js --progress",
+    "gh:deploy": "npm run gh:build && gh-pages -d public",
+    "deploy": "npm run gh:deploy"
   },
+  "pre-commit": [
+    "test"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rtivital/react-redux-boilerplate.git"
@@ -16,60 +26,85 @@
     "react",
     "redux"
   ],
-  "author": "Vitaly Rtishchev",
-  "license": "ISC",
+  "author": "Vitaly Rtishchev <rtivital@gmail.com> (http://github.com/rtivital)",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/rtivital/react-redux-boilerplate/issues"
   },
   "homepage": "https://github.com/rtivital/react-redux-boilerplate#readme",
   "dependencies": {
+    "axios": "^0.14.0",
+    "breakpoint-sass": "^2.7.0",
+    "classnames": "^2.2.5",
+    "lodash": "^4.16.0",
+    "node-uuid": "^1.4.7",
     "normalize-scss": "^5.0.3",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
+    "react": "^15.3.2",
+    "react-color-picker": "^4.0.2",
+    "react-dom": "^15.3.2",
     "react-fastclick": "^2.1.2",
     "react-redux": "^4.4.5",
-    "react-router": "^3.0.0-alpha.3",
+    "react-router": "^3.0.0-beta.1",
     "react-router-redux": "^4.0.5",
     "redux": "^3.5.2",
+    "redux-actions": "^0.12.0",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "autoprefixer": "^6.4.0",
-    "babel-core": "^6.14.0",
+    "autoprefixer": "^6.3.6",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.7.7",
     "babel-eslint": "^6.1.2",
-    "babel-loader": "^6.2.5",
-    "babel-plugin-module-alias": "^1.6.0",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-lodash": "^3.2.9",
+    "babel-plugin-module-resolver": "^2.0.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-imports": "^1.1.0",
+    "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
+    "babel-plugin-transform-react-pure-class-to-function": "^1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
     "babel-plugin-transform-runtime": "^6.12.0",
     "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-stage-1": "^6.13.0",
+    "babel-preset-es2015": "^6.6.0",
+    "babel-preset-react": "^6.5.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-register": "^6.14.0",
     "babel-runtime": "^6.11.6",
     "colors": "^1.1.2",
     "cross-env": "^2.0.0",
-    "css-loader": "^0.24.0",
-    "eslint": "^3.4.0",
-    "eslint-config-airbnb": "^10.0.1",
-    "eslint-import-resolver-babel-module-alias": "^1.5.1",
-    "eslint-plugin-import": "^1.14.0",
-    "eslint-plugin-jsx-a11y": "^2.2.0",
-    "eslint-plugin-react": "^6.1.2",
+    "css-loader": "^0.25.0",
+    "enzyme": "^2.4.1",
+    "eslint": "^3.3.1",
+    "eslint-config-airbnb": "^11.1.0",
+    "eslint-import-resolver-babel-module": "^2.0.1",
+    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-jsx-a11y": "^2.2.2",
+    "eslint-plugin-react": "^6.3.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.9.0",
-    "glob": "^7.0.6",
+    "gh-pages": "^0.11.0",
     "html-webpack-plugin": "^2.22.0",
-    "node-sass": "^3.8.0",
-    "postcss-loader": "^0.11.0",
-    "react-hot-loader": "^1.3.0",
+    "ignore-styles": "^5.0.1",
+    "lodash-webpack-plugin": "^0.10.1",
+    "mkdirp": "^0.5.1",
+    "node-sass": "^3.10.0",
+    "postcss-loader": "^0.13.0",
+    "pre-commit": "^1.1.3",
+    "react-addons-test-utils": "^15.3.2",
+    "react-hot-loader": "^3.0.0-beta.4",
+    "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "sass-resources-loader": "^1.1.0",
     "style-loader": "^0.13.1",
-    "svg-sprite-loader": "0.0.26",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.15.0"
+    "svg-sprite-loader": "0.0.27",
+    "tap-notify": "^1.0.0",
+    "tap-spec": "^4.1.1",
+    "tape": "^4.6.0",
+    "tape-catch": "^1.0.6",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.16.1"
   }
 }
