--- a/.babelrc
+++ b/.babelrc
@@ -1,12 +1,22 @@
 {
-  "presets": ["react", "es2015", "stage-0"],
+  "presets": ["react", ["es2015", { "loose" : true }], "stage-0"],
   "plugins": [
+    "lodash",
     "transform-decorators-legacy",
-    ["module-resolver", { "root": ["./src"] }],
+    "syntax-flow",
+    "transform-flow-strip-types",
+
+    ["module-resolver", {
+      "root": ["./src"],
+      "alias": {
+        "node_modules": "./node_modules",
+      },
+    }],
+
     ["transform-imports", {
       "react-router": {
-          "transform": "react-router/lib/${member}",
-          "preventFullImport": true
+        "transform": "react-router/lib/${member}",
+        "preventFullImport": true
       }
     }]
   ],
