--- a/.eslintrc
+++ b/.eslintrc
@@ -1,9 +1,35 @@
 {
   "parser": "babel-eslint",
-  "extends": ["airbnb"],
+  "extends": ["airbnb", "plugin:flowtype/recommended"],
+  "plugins": ["flowtype", "flowtype-errors"],
+  "env": {
+    "browser": true,
+    "node": true
+  },
+  "rules": {
+    "flowtype-errors/show-errors": 2,
+    "linebreak-style": 0,
+    "import/prefer-default-export": 0,
+    "consistent-return": 0,
+    "react/prefer-stateless-function": 0,
+    "react/sort-comp": 0,
+    "no-unused-expressions": 0,
+    "react/forbid-prop-types": 0,
+    "react/no-danger": 0,
+    "import/no-extraneous-dependencies": 0,
+    "arrow-parens": 0,
+    "no-mixed-operators": 0,
+    "no-confusing-arrow": 0,
+    "no-plusplus": 0,
+    "new-cap": 0,
+    "global-require": 0,
+    "class-methods-use-this": 0,
+    "spaced-comment": 0,
+  },
+
   "settings": {
     "import/resolver": {
-      "babel-module-alias": {}
+      "babel-module": {}
     }
   }
 }
