--- a/package.json
+++ b/package.json
@@ -4,61 +4,74 @@
   "description": "Boilerplate for second React Challenge",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint:withoutfix && npm run testonly",
-    "testonly": "cross-env NODE_ENV=development tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-notify | tap-spec",
-    "start": "cross-env NODE_ENV=development babel-node server.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack.config.babel.js --progress",
+    "test": "npm run lint:eslint && npm run lint:stylelint && npm run test:only",
+    "test:cache": "npm run lint:eslint-cache && npm run lint:stylelint && npm run test:only",
+    "test:only": "cross-env NODE_ENV=development tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-notify | tap-spec",
+    "test:flow": "flow",
+    "start": "cross-env NODE_ENV=development node scripts/start",
+    "start:storybook": "start-storybook -p 3003 -c storybook",
+    "build:storybook": "build-storybook -c storybook -o public/storybook",
+    "build": "cross-env NODE_ENV=production webpack --progress --colors && npm run build:storybook",
     "clean": "rimraf public",
-    "lint": "eslint src --ext .js --ext .jsx --fix",
-    "lint:withoutfix": "eslint src --ext .js --ext .jsx",
-    "gh:build": "npm run clean && cross-env NODE_ENV=production BUILD=pages webpack --config webpack.config.babel.js --progress",
-    "gh:deploy": "npm run gh:build && gh-pages -d public",
-    "deploy": "npm run gh:deploy"
+    "lint": "npm run lint:eslint-fix && npm run lint:stylelint",
+    "lint:eslint": "eslint src --ext .js --ext .jsx",
+    "lint:eslint-fix": "eslint src --ext .js --ext .jsx --fix",
+    "lint:eslint-cache": "eslint src --ext .js --ext .jsx --cache",
+    "lint:stylelint": "stylelint **/*.scss",
+    "gh:build": "npm run clean && npm run build:storybook && cross-env NODE_ENV=production BUILD=pages webpack --progress --colors",
+    "gh:deploy": "npm run gh:build && gh-pages -d public"
   },
-  "pre-commit": [
-    "test"
+  "pre-push": [
+    "test:cache"
   ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/rtivital/react-redux-boilerplate.git"
+    "url": "git+https://github.com/rtivital/react-challenge-colorizr.git"
   },
   "keywords": [
     "react",
-    "redux"
+    "react-challenge",
+    "react-router",
+    "redux",
+    "react-redux"
   ],
   "author": "Vitaly Rtishchev <rtivital@gmail.com> (http://github.com/rtivital)",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/rtivital/react-redux-boilerplate/issues"
+    "url": "https://github.com/rtivital/react-challenge-colorizr/issues"
   },
-  "homepage": "https://github.com/rtivital/react-redux-boilerplate#readme",
+  "homepage": "https://github.com/rtivital/react-challenge-colorizr#readme",
   "dependencies": {
-    "axios": "^0.14.0",
+    "axios": "^0.15.2",
     "breakpoint-sass": "^2.7.0",
     "classnames": "^2.2.5",
-    "lodash": "^4.16.0",
+    "lodash": "^4.16.6",
     "node-uuid": "^1.4.7",
-    "normalize-scss": "^5.0.3",
+    "normalize.css": "^5.0.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-fastclick": "^2.1.2",
+    "react-onclickoutside": "^5.7.0",
     "react-redux": "^4.4.5",
     "react-router": "^3.0.0-beta.1",
-    "react-router-redux": "^4.0.5",
+    "react-router-redux": "^4.0.7",
     "redux": "^3.5.2",
-    "redux-actions": "^0.12.0",
+    "redux-actions": "^0.13.0",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
+    "@kadira/storybook": "^2.21.0",
     "autoprefixer": "^6.3.6",
     "babel-cli": "^6.14.0",
-    "babel-core": "^6.7.7",
-    "babel-eslint": "^6.1.2",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.9",
     "babel-plugin-module-resolver": "^2.0.0",
+    "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-flow-strip-types": "^6.18.0",
     "babel-plugin-transform-imports": "^1.1.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
@@ -71,34 +84,43 @@
     "babel-preset-stage-0": "^6.5.0",
     "babel-register": "^6.14.0",
     "babel-runtime": "^6.11.6",
-    "colors": "^1.1.2",
-    "cross-env": "^2.0.0",
+    "chalk": "^1.1.3",
+    "cross-env": "^3.1.3",
     "css-loader": "^0.25.0",
     "enzyme": "^2.4.1",
-    "eslint": "^3.3.1",
-    "eslint-config-airbnb": "^11.1.0",
+    "eslint": "^3.9.1",
+    "eslint-config-airbnb": "^12.0.0",
     "eslint-import-resolver-babel-module": "^2.0.1",
-    "eslint-plugin-import": "^1.15.0",
+    "eslint-plugin-flowtype": "^2.25.0",
+    "eslint-plugin-flowtype-errors": "^1.5.0",
+    "eslint-plugin-import": "^2.1.0",
     "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.3.0",
+    "eslint-plugin-react": "^6.5.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.9.0",
+    "flow-bin": "^0.34.0",
     "gh-pages": "^0.11.0",
-    "html-webpack-plugin": "^2.22.0",
+    "html-webpack-plugin": "^2.24.1",
     "ignore-styles": "^5.0.1",
-    "lodash-webpack-plugin": "^0.10.1",
+    "jsonfile": "^2.4.0",
+    "lodash-webpack-plugin": "^0.10.3",
     "mkdirp": "^0.5.1",
-    "node-sass": "^3.10.0",
-    "postcss-loader": "^0.13.0",
-    "pre-commit": "^1.1.3",
+    "node-sass": "^3.11.1",
+    "postcss-loader": "^1.1.0",
+    "pre-push": "^0.1.1",
     "react-addons-test-utils": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.4",
+    "request": "^2.78.0",
+    "request-promise": "^4.1.1",
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.0",
     "sass-resources-loader": "^1.1.0",
     "style-loader": "^0.13.1",
-    "svg-sprite-loader": "0.0.27",
+    "stylelint": "^7.3.1",
+    "stylelint-config-standard": "^14.0.0",
+    "stylelint-scss": "^1.3.4",
+    "svg-sprite-loader": "0.0.31",
     "tap-notify": "^1.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.0",
