--- a/package.json
+++ b/package.json
@@ -42,35 +42,35 @@
   },
   "homepage": "https://github.com/rtivital/react-challenge-colorizr#readme",
   "dependencies": {
-    "axios": "^0.15.2",
-    "breakpoint-sass": "^2.7.0",
+    "axios": "^0.15.3",
+    "breakpoint-sass": "^2.7.1",
     "classnames": "^2.2.5",
-    "lodash": "^4.16.6",
+    "lodash": "^4.17.2",
     "node-uuid": "^1.4.7",
     "normalize.css": "^5.0.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
+    "react": "^15.4.1",
+    "react-dom": "^15.4.1",
     "react-fastclick": "^2.1.2",
-    "react-onclickoutside": "^5.7.0",
-    "react-redux": "^4.4.5",
-    "react-router": "^3.0.0-beta.1",
+    "react-onclickoutside": "^5.7.1",
+    "react-redux": "^4.4.6",
+    "react-router": "^3.0.0",
     "react-router-redux": "^4.0.7",
-    "redux": "^3.5.2",
-    "redux-actions": "^0.13.0",
+    "redux": "^3.6.0",
+    "redux-actions": "^1.1.0",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
-    "@kadira/storybook": "^2.21.0",
+    "@kadira/storybook": "^2.34.0",
     "@kadira/storybook-addon-knobs": "^1.7.1",
     "@kadira/storybook-addons": "^1.6.1",
-    "autoprefixer": "^6.3.6",
-    "babel-cli": "^6.14.0",
-    "babel-core": "^6.18.2",
-    "babel-eslint": "^7.1.0",
-    "babel-loader": "^6.2.4",
+    "autoprefixer": "^6.5.3",
+    "babel-cli": "^6.18.0",
+    "babel-core": "^6.20.0",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.9",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-lodash": "^3.2.9",
-    "babel-plugin-module-resolver": "^2.0.0",
+    "babel-plugin-lodash": "^3.2.10",
+    "babel-plugin-module-resolver": "^2.4.0",
     "babel-plugin-syntax-flow": "^6.18.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-flow-strip-types": "^6.18.0",
@@ -78,57 +78,57 @@
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-plugin-transform-react-pure-class-to-function": "^1.0.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.2.9",
-    "babel-plugin-transform-runtime": "^6.12.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.14.0",
-    "babel-runtime": "^6.11.6",
+    "babel-plugin-transform-react-remove-prop-types": "^0.2.11",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.18.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "babel-runtime": "^6.20.0",
     "chalk": "^1.1.3",
     "cross-env": "^3.1.3",
-    "css-loader": "^0.25.0",
-    "enzyme": "^2.4.1",
-    "eslint": "^3.9.1",
-    "eslint-config-airbnb": "^12.0.0",
-    "eslint-import-resolver-babel-module": "^2.0.1",
-    "eslint-plugin-flowtype": "^2.25.0",
-    "eslint-plugin-flowtype-errors": "^1.5.0",
-    "eslint-plugin-import": "^2.1.0",
-    "eslint-plugin-jsx-a11y": "^2.2.2",
-    "eslint-plugin-react": "^6.5.0",
+    "css-loader": "^0.26.1",
+    "enzyme": "^2.6.0",
+    "eslint": "^3.12.0",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-import-resolver-babel-module": "^2.2.1",
+    "eslint-plugin-flowtype": "^2.29.1",
+    "eslint-plugin-flowtype-errors": "^2.0.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "2.2.3",
+    "eslint-plugin-react": "^6.8.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.9.0",
-    "flow-bin": "^0.34.0",
-    "gh-pages": "^0.11.0",
+    "flow-bin": "^0.36.0",
+    "gh-pages": "^0.12.0",
     "html-webpack-plugin": "^2.24.1",
     "ignore-styles": "^5.0.1",
     "jsonfile": "^2.4.0",
-    "lodash-webpack-plugin": "^0.10.3",
+    "lodash-webpack-plugin": "^0.10.6",
     "mkdirp": "^0.5.1",
     "moment": "^2.17.1",
-    "node-sass": "^3.11.1",
-    "postcss-loader": "^1.1.0",
+    "node-sass": "^4.0.0",
+    "postcss-loader": "^1.2.0",
     "pre-push": "^0.1.1",
-    "react-addons-test-utils": "^15.3.2",
+    "react-addons-test-utils": "^15.4.1",
     "react-hot-loader": "^3.0.0-beta.4",
-    "request": "^2.78.0",
+    "request": "^2.79.0",
     "request-promise": "^4.1.1",
     "rimraf": "^2.5.4",
-    "sass-loader": "^4.0.0",
+    "sass-loader": "^4.0.2",
     "sass-resources-loader": "^1.1.0",
     "style-loader": "^0.13.1",
-    "stylelint": "^7.3.1",
-    "stylelint-config-standard": "^14.0.0",
+    "stylelint": "^7.6.0",
+    "stylelint-config-standard": "^15.0.0",
     "stylelint-scss": "^1.3.4",
-    "svg-sprite-loader": "0.0.31",
+    "svg-sprite-loader": "0.1.1",
     "tap-notify": "^1.0.0",
     "tap-spec": "^4.1.1",
-    "tape": "^4.6.0",
+    "tape": "^4.6.3",
     "tape-catch": "^1.0.6",
-    "webpack": "^1.13.0",
-    "webpack-dev-server": "^1.16.1"
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   }
 }
