--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.9.0",
     "gh-pages": "^0.12.0",
+    "git-repo-name": "^0.6.0",
     "html-webpack-plugin": "^2.24.1",
     "ignore-styles": "^5.0.1",
     "jsonfile": "^2.4.0",
