--- a/package.json
+++ b/package.json
@@ -43,13 +43,14 @@
     "classnames": "^2.2.5",
     "lodash": "^4.17.2",
     "node-uuid": "^1.4.8",
-    "normalize.css": "^5.0.0",
+    "normalize.css": "^7.0.0",
     "open-browser-webpack-plugin": "^0.0.5",
+    "prop-types": "^15.5.10",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-fastclick": "^2.1.2",
+    "react-fastclick": "^3.0.2-alpha.1",
     "react-onclickoutside": "^6.0.1",
-    "react-redux": "^4.4.8",
+    "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
     "react-router-redux": "^4.0.7",
     "redux": "^3.6.0",
@@ -60,11 +61,11 @@
     "@kadira/storybook": "^2.34.0",
     "@kadira/storybook-addon-knobs": "^1.7.1",
     "@kadira/storybook-addons": "^1.6.1",
-    "autoprefixer": "^6.7.7",
+    "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
     "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^6.4.1",
+    "babel-loader": "^7.0.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.10",
     "babel-plugin-module-resolver": "^2.7.1",
@@ -83,44 +84,44 @@
     "babel-runtime": "^6.20.0",
     "chalk": "^1.1.3",
     "cross-env": "^5.0.0",
-    "css-loader": "^0.26.4",
+    "css-loader": "^0.28.4",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^13.0.0",
+    "eslint-config-airbnb": "^15.0.1",
     "eslint-import-resolver-babel-module": "^3.0.0",
     "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "2.2.3",
-    "eslint-plugin-react": "^6.10.3",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "eslint-plugin-jsx-a11y": "5.0.3",
+    "eslint-plugin-react": "^7.0.1",
+    "extract-text-webpack-plugin": "^2.1.0",
     "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.11.1",
     "gh-pages": "^1.0.0",
     "git-repo-name": "^0.6.0",
     "html-webpack-plugin": "^2.28.0",
     "ignore-styles": "^5.0.1",
-    "jsonfile": "^2.4.0",
-    "lodash-webpack-plugin": "^0.10.7",
+    "jsonfile": "^3.0.0",
+    "lodash-webpack-plugin": "^0.11.4",
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
-    "postcss-loader": "^1.3.3",
+    "postcss-loader": "^2.0.5",
     "react-addons-test-utils": "^15.5.1",
     "react-hot-loader": "^3.0.0-beta.7",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "rimraf": "^2.6.1",
-    "sass-loader": "^4.0.2",
+    "sass-loader": "^6.0.5",
     "sass-resources-loader": "^1.2.1",
-    "style-loader": "^0.13.2",
+    "style-loader": "^0.18.1",
     "stylelint": "^7.10.1",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-scss": "^1.4.4",
-    "svg-sprite-loader": "0.1.1",
+    "svg-sprite-loader": "3.0.5",
     "tap-notify": "^1.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.6.3",
     "tape-catch": "^1.0.6",
-    "webpack": "^1.15.0",
-    "webpack-dev-server": "^1.16.5"
+    "webpack": "^2.6.1",
+    "webpack-dev-server": "^2.4.5"
   }
 }
