--- a/package.json
+++ b/package.json
@@ -38,7 +38,7 @@
   },
   "homepage": "https://github.com/rtivital/react-challenge-colorizr#readme",
   "dependencies": {
-    "axios": "^0.16.1",
+    "axios": "^0.16.2",
     "breakpoint-sass": "^2.7.1",
     "classnames": "^2.2.5",
     "lodash": "^4.17.2",
@@ -46,14 +46,14 @@
     "normalize.css": "^7.0.0",
     "open-browser-webpack-plugin": "^0.0.5",
     "prop-types": "^15.5.10",
-    "react": "^15.5.4",
-    "react-dom": "^15.5.4",
-    "react-fastclick": "^3.0.2-alpha.1",
-    "react-onclickoutside": "^6.0.1",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1",
+    "react-fastclick": "^3.0.2",
+    "react-onclickoutside": "^6.1.1",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
     "react-router-redux": "^4.0.7",
-    "redux": "^3.6.0",
+    "redux": "^3.7.0",
     "redux-actions": "^2.0.3",
     "redux-thunk": "^2.1.0"
   },
@@ -63,18 +63,18 @@
     "@kadira/storybook-addons": "^1.6.1",
     "autoprefixer": "^7.1.1",
     "babel-cli": "^6.24.1",
-    "babel-core": "^6.24.1",
+    "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
-    "babel-loader": "^7.0.0",
+    "babel-loader": "^7.1.0",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-lodash": "^3.2.10",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-imports": "^1.2.0",
+    "babel-plugin-transform-imports": "^1.4.0",
     "babel-plugin-transform-react-constant-elements": "^6.9.1",
     "babel-plugin-transform-react-inline-elements": "^6.8.0",
     "babel-plugin-transform-react-pure-class-to-function": "^1.0.1",
-    "babel-plugin-transform-react-remove-prop-types": "^0.4.5",
+    "babel-plugin-transform-react-remove-prop-types": "^0.4.6",
     "babel-plugin-transform-runtime": "^6.15.0",
     "babel-polyfill": "^6.20.0",
     "babel-preset-es2015": "^6.24.1",
@@ -83,7 +83,7 @@
     "babel-register": "^6.24.1",
     "babel-runtime": "^6.20.0",
     "chalk": "^1.1.3",
-    "cross-env": "^5.0.0",
+    "cross-env": "^5.0.1",
     "css-loader": "^0.28.4",
     "enzyme": "^2.8.2",
     "eslint": "^3.19.0",
@@ -92,9 +92,9 @@
     "eslint-plugin-import": "^2.3.0",
     "eslint-plugin-jsx-a11y": "5.0.3",
     "eslint-plugin-react": "^7.0.1",
-    "extract-text-webpack-plugin": "^2.1.0",
+    "extract-text-webpack-plugin": "^2.1.2",
     "favicons-webpack-plugin": "0.0.7",
-    "file-loader": "^0.11.1",
+    "file-loader": "^0.11.2",
     "gh-pages": "^1.0.0",
     "git-repo-name": "^0.6.0",
     "html-webpack-plugin": "^2.28.0",
@@ -104,16 +104,16 @@
     "mkdirp": "^0.5.1",
     "moment": "^2.18.1",
     "node-sass": "^4.5.3",
-    "postcss-loader": "^2.0.5",
-    "react-addons-test-utils": "^15.5.1",
+    "postcss-loader": "^2.0.6",
+    "react-addons-test-utils": "^15.6.0",
     "react-hot-loader": "^3.0.0-beta.7",
     "request": "^2.81.0",
     "request-promise": "^4.2.1",
     "rimraf": "^2.6.1",
-    "sass-loader": "^6.0.5",
+    "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.2.1",
-    "style-loader": "^0.18.1",
-    "stylelint": "^7.10.1",
+    "style-loader": "^0.18.2",
+    "stylelint": "^7.11.1",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-scss": "^1.4.4",
     "svg-sprite-loader": "3.0.5",
@@ -122,6 +122,6 @@
     "tape": "^4.6.3",
     "tape-catch": "^1.0.6",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.4.5"
+    "webpack-dev-server": "^2.5.0"
   }
 }
