add centering decorator and button story

--- a/.babelrc
+++ b/.babelrc
@@ -7,7 +7,8 @@
     ["module-resolver", {
       "root": ["./src"],
       "alias": {
-        "node_modules": "./node_modules"
+        "node_modules": "./node_modules",
+        "storybook": "./storybook"
       }
     }],
 
