--- a/.babelrc
+++ b/.babelrc
@@ -22,13 +22,8 @@
 
   "env": {
     "production": {
-      "plugins": [
-        "transform-runtime",
-        "transform-react-inline-elements",
-        "transform-react-remove-prop-types",
-        "transform-react-constant-elements",
-        "transform-react-pure-class-to-function"
-      ]
+      "presets": ["react-optimize"],
+      "plugins": ["transform-runtime"]
     }
   }
 }
