--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "npm run lint:eslint && npm run lint:stylelint && npm run test:tape",
     "test:cache": "npm run lint:eslint-cache && npm run lint:stylelint && npm run test:tape",
-    "test:tape": "cross-env NODE_ENV=development tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-notify | tap-spec",
+    "test:tape": "tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-spec",
     "start": "cross-env NODE_ENV=development node scripts/start",
     "build": "cross-env NODE_ENV=production webpack --progress --colors && npm run storybook:build",
     "clean": "rimraf public",
@@ -41,7 +41,6 @@
     "axios": "^0.16.2",
     "classnames": "^2.2.5",
     "lodash": "^4.17.2",
-    "node-uuid": "^1.4.8",
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
@@ -51,7 +50,6 @@
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
     "redux": "^3.7.1",
-    "redux-actions": "^2.0.3",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
@@ -92,7 +90,6 @@
     "html-webpack-plugin": "^2.29.0",
     "ignore-styles": "^5.0.1",
     "lodash-webpack-plugin": "^0.11.4",
-    "moment": "^2.18.1",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
     "postcss-loader": "^2.0.6",
@@ -105,8 +102,6 @@
     "stylelint": "^7.12.0",
     "stylelint-config-standard": "^16.0.0",
     "stylelint-scss": "^1.4.4",
-    "svg-sprite-loader": "3.0.5",
-    "tap-notify": "^1.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.7.0",
     "tape-catch": "^1.0.6",
