--- a/.stylelintrc
+++ b/.stylelintrc
@@ -8,8 +8,8 @@
     "color-hex-length": "long",
     "color-named": "never",
     "selector-no-qualifying-type": true,
-    "selector-max-id": 0,
-    "selector-max-attribute": 0,
+    "selector-no-id": true,
+    "selector-no-attribute": true,
     "selector-combinator-space-after": "always",
     "selector-attribute-quotes": "always",
     "selector-attribute-operator-space-before": "always",
