--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
     "start": "cross-env NODE_ENV=development node scripts/start",
     "build": "cross-env NODE_ENV=production webpack --progress --colors && npm run storybook:build",
     "clean": "rimraf public",
-    "lint": "npm run lint:eslint-fix && npm run lint:stylelint",
-    "lint:eslint": "eslint src --ext .js --ext .jsx",
-    "lint:eslint-fix": "eslint src --ext .js --ext .jsx --fix",
-    "lint:eslint-cache": "eslint src --ext .js --ext .jsx --cache",
-    "lint:styles": "stylelint 'src/**/*.scss' --cache",
+    "lint": "npm run lint:js && npm run lint:scss",
+    "lint:js": "eslint src --ext .js --ext .jsx --cache",
+    "lint:scss": "stylelint 'src/**/*.scss' --cache",
     "pages:build": "npm run clean && npm run storybook:build && cross-env NODE_ENV=production BUILD=pages webpack --progress --colors",
     "pages:deploy": "npm run pages:build && gh-pages -d public",
     "storybook:start": "start-storybook -p 3003 -c storybook",
