--- a/package.json
+++ b/package.json
@@ -4,9 +4,7 @@
   "description": "Simple boilerplate for working with React, redux, react-router and Github Pages",
   "main": "index.js",
   "scripts": {
-    "test": "npm run lint:eslint && npm run lint:stylelint && npm run test:tape",
-    "test:cache": "npm run lint:eslint-cache && npm run lint:stylelint && npm run test:tape",
-    "test:tape": "tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-spec",
+    "test": "tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-spec",
     "start": "cross-env NODE_ENV=development node scripts/start",
     "build": "cross-env NODE_ENV=production webpack --progress --colors && npm run storybook:build",
     "clean": "rimraf public",
