--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
     "test": "tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-spec",
     "start": "cross-env NODE_ENV=development node scripts/start",
     "build": "cross-env NODE_ENV=production webpack --progress --colors && npm run storybook:build",
+    "deploy": "npm run pages:build && gh-pages -d public",
     "clean": "rimraf public",
     "lint": "npm run lint:js && npm run lint:scss",
     "lint:js": "eslint src --ext .js --ext .jsx --cache",
     "lint:scss": "stylelint 'src/**/*.scss' --cache",
     "pages:build": "npm run clean && npm run storybook:build && cross-env NODE_ENV=production BUILD=pages webpack --progress --colors",
-    "pages:deploy": "npm run pages:build && gh-pages -d public",
     "storybook:start": "start-storybook -p 3003 -c storybook",
     "storybook:build": "build-storybook -c storybook -o public/storybook"
   },
