--- a/package.json
+++ b/package.json
@@ -33,16 +33,16 @@
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
-    "react-onclickoutside": "^6.1.1",
+    "react-onclickoutside": "^6.4.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
-    "redux": "^3.7.1",
+    "redux": "^3.7.2",
     "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "@kadira/storybook": "^2.34.0",
     "@kadira/storybook-addons": "^1.6.1",
-    "autoprefixer": "^7.1.1",
+    "autoprefixer": "^7.1.2",
     "babel-core": "^6.25.0",
     "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
@@ -62,11 +62,11 @@
     "css-loader": "^0.28.4",
     "enzyme": "^2.9.1",
     "eslint": "^3.19.0",
-    "eslint-config-airbnb": "^15.0.1",
+    "eslint-config-airbnb": "^15.0.2",
     "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-plugin-import": "^2.3.0",
-    "eslint-plugin-jsx-a11y": "5.0.3",
-    "eslint-plugin-react": "^7.0.1",
+    "eslint-plugin-import": "2.6.1",
+    "eslint-plugin-jsx-a11y": "5.1.1",
+    "eslint-plugin-react": "7.1.0",
     "extract-text-webpack-plugin": "^2.1.2",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.11.2",
@@ -83,12 +83,12 @@
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.2.1",
     "style-loader": "^0.18.2",
-    "stylelint": "^7.12.0",
+    "stylelint": "^7.13.0",
     "stylelint-config-standard": "^16.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.7.0",
     "tape-catch": "^1.0.6",
     "webpack": "^2.6.1",
-    "webpack-dev-server": "^2.5.0"
+    "webpack-dev-server": "^2.5.1"
   }
 }
