replace react-onclickoutside with react-clickoutside

--- a/package.json
+++ b/package.json
@@ -32,8 +32,8 @@
     "normalize.css": "^7.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
+    "react-click-outside": "^2.3.1",
     "react-dom": "^15.6.1",
-    "react-onclickoutside": "^6.4.0",
     "react-redux": "^5.0.5",
     "react-router": "^3.0.5",
     "redux": "^3.7.2",
