--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple boilerplate for working with React, redux, react-router and Github Pages",
   "main": "index.js",
   "scripts": {
+    "init": "rimraf .git",
     "test": "tape --require babel-register --require ignore-styles src/**/*.test.{js,jsx} | tap-spec",
     "start": "cross-env NODE_ENV=development node scripts/start",
     "build": "cross-env NODE_ENV=production webpack --progress --colors && npm run storybook:build",
