--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "babel-register": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "chalk": "^2.1.0",
+    "child-process-promise": "^2.2.1",
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.5",
     "enzyme": "^2.9.1",
