--- a/package.json
+++ b/package.json
@@ -69,7 +69,7 @@
     "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-babel-module": "^3.0.0",
     "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "6.0.2",
+    "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.2.1",
     "extract-text-webpack-plugin": "^3.0.0",
     "favicons-webpack-plugin": "0.0.7",
@@ -80,6 +80,7 @@
     "ignore-styles": "^5.0.1",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
+    "postcss": "^6.0.10",
     "postcss-loader": "^2.0.6",
     "react-addons-test-utils": "^15.6.0",
     "react-hot-loader": "^3.0.0-beta.7",
