--- a/package.json
+++ b/package.json
@@ -50,7 +50,7 @@
     "babel-loader": "^7.1.2",
     "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-module-resolver": "^2.7.1",
-    "babel-plugin-ramda": "^1.3.0",
+    "babel-plugin-ramda": "^1.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
@@ -63,14 +63,14 @@
     "chalk": "^2.1.0",
     "child-process-promise": "^2.2.1",
     "cross-env": "^5.0.5",
-    "css-loader": "^0.28.5",
+    "css-loader": "^0.28.7",
     "enzyme": "^2.9.1",
-    "eslint": "^4.4.1",
+    "eslint": "^4.6.1",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-babel-module": "^3.0.0",
-    "eslint-plugin-import": "2.7.0",
-    "eslint-plugin-jsx-a11y": "5.1.1",
-    "eslint-plugin-react": "7.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-jsx-a11y": "^5.1.1",
+    "eslint-plugin-react": "^7.3.0",
     "extract-text-webpack-plugin": "^3.0.0",
     "favicons-webpack-plugin": "0.0.7",
     "file-loader": "^0.11.2",
@@ -80,7 +80,7 @@
     "ignore-styles": "^5.0.1",
     "node-sass": "^4.5.3",
     "open-browser-webpack-plugin": "^0.0.5",
-    "postcss": "^6.0.10",
+    "postcss": "^6.0.11",
     "postcss-loader": "^2.0.6",
     "react-addons-test-utils": "^15.6.0",
     "react-hot-loader": "^3.0.0-beta.7",
@@ -88,7 +88,7 @@
     "sass-loader": "^6.0.6",
     "sass-resources-loader": "^1.3.0",
     "style-loader": "^0.18.2",
-    "stylelint": "^8.0.0",
+    "stylelint": "^8.1.1",
     "stylelint-config-standard": "^17.0.0",
     "tap-spec": "^4.1.1",
     "tape": "^4.8.0",
