--- a/.stylelintrc
+++ b/.stylelintrc
@@ -1,5 +1,6 @@
 {
   "extends": "stylelint-config-standard",
+  "plugins": ["stylelint-scss"],
   "rules": {
     "indentation": 2,
     "string-quotes": "single",
@@ -8,8 +9,6 @@
     "color-hex-length": "long",
     "color-named": "never",
     "selector-no-qualifying-type": true,
-    "selector-no-id": true,
-    "selector-no-attribute": true,
     "selector-combinator-space-after": "always",
     "selector-attribute-quotes": "always",
     "selector-attribute-operator-space-before": "always",
@@ -34,6 +33,7 @@
     "media-feature-parentheses-space-inside": "never",
     "media-feature-name-no-vendor-prefix": true,
     "media-feature-colon-space-before": "never",
-    "media-feature-colon-space-after": "always"
+    "media-feature-colon-space-after": "always",
+    "at-rule-no-unknown": null
   }
 }
