add material design colors

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "clean": "rimraf public",
     "lint": "npm run lint:js && npm run lint:scss",
     "lint:js": "eslint src --ext .js --ext .jsx --cache",
-    "lint:scss": "stylelint 'src/**/*.scss' --cache"
+    "lint:scss": "stylelint 'src/**/*.scss' --cache --fix"
   },
   "repository": {
     "type": "git",
