--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "autoprefixer": "^7.2.5",
     "babel-core": "^6.26.0",
     "babel-eslint": "^8.2.1",
+    "babel-jest": "^22.0.6",
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.3.2",
     "babel-plugin-ramda": "^1.4.3",
@@ -78,6 +79,7 @@
     "git-repo-name": "^0.6.0",
     "html-webpack-plugin": "^2.30.1",
     "ignore-styles": "^5.0.1",
+    "jest": "^22.0.6",
     "lodash-webpack-plugin": "^0.11.4",
     "node-sass": "^4.7.2",
     "open-browser-webpack-plugin": "^0.0.5",
