setup alias resolving for jest with babel module resolver

--- a/.babelrc
+++ b/.babelrc
@@ -16,7 +16,8 @@
     "test": {
       "presets": [
         ["env", { "targets": { "browsers": ["last 2 versions"] } }]
-      ]
+      ],
+      "plugins": [["module-resolver", { "root": ["./src"] }]]
     }
   }
 }
