--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "babel-jest": "^22.0.6",
     "babel-loader": "^7.1.2",
     "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-module-resolver": "^3.0.0",
     "babel-plugin-ramda": "^1.4.3",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
