replace clean npm script with clean webpack plugin

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
     "test": "jest",
     "prettier": "prettier 'src/**/**/*.?(js|jsx)' --write",
     "start": "cross-env NODE_ENV=development node scripts/start",
-    "build": "npm run clean && cross-env NODE_ENV=production webpack --progress --colors",
+    "build": "cross-env NODE_ENV=production webpack --progress --colors",
     "deploy": "cross-env NODE_ENV=production BUILD=pages node scripts/deploy",
-    "clean": "rimraf public",
     "clean:git": "node scripts/clean-git",
     "lint": "npm run lint:js && npm run lint:scss",
     "lint:js": "eslint src --ext .js --ext .jsx --cache || true",
@@ -75,6 +74,7 @@
     "babel-runtime": "^6.26.0",
     "bluebird": "^3.5.1",
     "chalk": "^2.4.1",
+    "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
     "eslint": "^4.19.1",
