move analyzer to separate npm script

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "prettier": "prettier 'src/**/**/*.?(js|jsx)' --write",
     "start": "cross-env NODE_ENV=development node scripts/start",
     "build": "cross-env NODE_ENV=production webpack --progress --colors",
+    "analyze": "cross-env NODE_ENV=production ANALYZE=1 webpack --progress --colors",
     "deploy": "cross-env NODE_ENV=production BUILD=pages node scripts/deploy",
     "clean:git": "node scripts/clean-git",
     "lint": "npm run lint:js && npm run lint:scss",
