Setup main styles and babel configurations

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "prettier": "prettier 'src/**/**/*.?(js|jsx)' --write",
-    "start": "cross-env NODE_ENV=development node scripts/start",
+    "start": "webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --progress --colors",
     "analyze": "cross-env NODE_ENV=production ANALYZE=1 webpack --progress --colors",
     "deploy": "cross-env NODE_ENV=production BUILD=pages node scripts/deploy",
@@ -17,6 +17,9 @@
     "storybook": "start-storybook -p 9001 -c storybook",
     "storybook:build": "build-storybook -c storybook"
   },
+  "browserslist": [
+    "last 2 version"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/rtivital/react-pages-boilerplate.git"
@@ -31,25 +34,38 @@
     "classnames": "^2.2.6",
     "enzyme-adapter-react-16": "^1.15.4",
     "normalize.css": "^8.0.1",
+    "open-color": "^1.7.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-hot-loader": "^4.12.21",
-    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
     "webpack-bundle-analyzer": "^3.8.0"
   },
   "devDependencies": {
-    "enzyme": "^3.11.0",
-    "enzyme-to-json": "^3.5.0",
+    "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-export-default-from": "^7.10.4",
+    "@babel/preset-env": "^7.11.5",
+    "@babel/preset-react": "^7.10.4",
+    "@rtivital/eslint-config": "1.0.1",
     "autoprefixer": "^9.8.6",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.3.0",
     "babel-loader": "^8.1.0",
     "chalk": "^4.1.0",
+    "cname-webpack-plugin": "^2.0.1",
     "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
+    "enzyme": "^3.11.0",
+    "enzyme-to-json": "^3.5.0",
+    "eslint": "^7.8.0",
+    "eslint-config-airbnb": "^18.2.0",
     "eslint-import-resolver-webpack": "^0.12.2",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^24.0.0",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.6",
+    "eslint-plugin-react-hooks": "^4.1.0",
     "favicons-webpack-plugin": "4.2.0",
     "file-loader": "^6.1.0",
     "gh-pages": "^3.1.0",
@@ -57,15 +73,21 @@
     "html-webpack-plugin": "^4.4.1",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^26.4.2",
+    "less": "^3.12.2",
+    "less-loader": "^7.0.1",
+    "mini-css-extract-plugin": "^0.11.1",
     "open-browser-webpack-plugin": "^0.0.5",
+    "optimize-css-assets-webpack-plugin": "^5.0.4",
     "postcss": "^7.0.32",
     "postcss-loader": "^4.0.1",
+    "prerender-spa-plugin": "^3.4.0",
     "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
     "style-loader": "^1.2.1",
     "stylelint": "^13.7.0",
     "stylelint-config-css-modules": "^2.2.0",
     "stylelint-config-standard": "^20.0.0",
+    "terser-webpack-plugin": "^4.1.0",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
