--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,11 @@
-# Logs
 logs
 *.log
 npm-debug.log*
-
-# Runtime data
-pids
-*.pid
-*.seed
-
-# Dependency directories
 node_modules
-jspm_packages
-
-# Optional npm cache directory
-.npm
-
-# Optional REPL history
-.node_repl_history
-
-# Because Mac
-.DS_Store
-
-# Project Files
 public
 storybook-static
 docs
 .eslintcache
 .stylelintcache
+dist
+.DS_Store
