Setup test deployment to gh-pages

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prettier": "prettier 'src/**/**/*.?(js|jsx)' --write",
     "start": "webpack-dev-server",
     "build": "cross-env NODE_ENV=production webpack --progress --colors",
-    "deploy": "cross-env NODE_ENV=production BUILD=pages node scripts/deploy",
+    "deploy": "npm run build && gh-pages -d dist",
     "lint": "eslint src --ext .js --ext .jsx"
   },
   "browserslist": [
