Update eslint configuration to @mantine/eslint-config

--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "webpack serve",
     "build": "cross-env NODE_ENV=production webpack --progress --colors",
     "deploy": "npm run build && gh-pages -d dist",
-    "lint": "eslint src --ext .js --ext .jsx"
+    "lint": "eslint src --ext .ts --ext .tsx"
   },
   "repository": {
     "type": "git",
@@ -23,30 +23,34 @@
   },
   "homepage": "https://github.com/rtivital/react-pages-boilerplate#readme",
   "dependencies": {
+    "@mantine/core": "^2.2.0",
+    "@mantine/eslint-config": "2.2.0",
+    "@mantine/hooks": "^2.2.0",
     "classnames": "^2.3.1",
     "open-color": "^1.8.0",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-jss": "^10.7.1",
     "react-router-dom": "^5.2.0",
     "webpack-bundle-analyzer": "^4.4.2"
   },
   "devDependencies": {
     "@types/react": "^17.0.15",
     "@types/react-dom": "^17.0.9",
-    "@typescript-eslint/eslint-plugin": "^4.29.0",
-    "@typescript-eslint/parser": "^4.29.0",
+    "@typescript-eslint/eslint-plugin": "^4.26.0",
+    "@typescript-eslint/parser": "^4.26.0",
     "@wojtekmaj/enzyme-adapter-react-17": "^0.6.3",
     "chalk": "^4.1.2",
     "cname-webpack-plugin": "^3.0.0",
     "cross-env": "^7.0.3",
     "enzyme": "^3.11.0",
     "enzyme-to-json": "^3.6.2",
-    "eslint": "^7.32.0",
+    "eslint": "^7.27.0",
     "eslint-config-airbnb-typescript": "^12.3.1",
     "eslint-import-resolver-webpack": "^0.13.1",
     "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jest": "^24.4.0",
+    "eslint-plugin-jest": "^24.3.6",
     "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
@@ -57,7 +61,7 @@
     "git-repo-name": "^1.0.1",
     "html-webpack-plugin": "^5.3.2",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^27.0.6",
+    "jest": "^26.6.3",
     "open-browser-webpack-plugin": "^0.0.5",
     "prettier": "^2.3.2",
     "rimraf": "^3.0.2",
